[package]
name = "actix_lambda"
version = "0.2.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
license = "AGPL-3.0-only"
homepage = "https://github.com/palfrey/actix_lambda"
repository = "https://github.com/palfrey/actix_lambda"
description = "Runs your actix-web app as a lambda app that will respond to Application Load Balancer requests"
readme = "README.md"
categories = ["development-tools::testing", "web-programming::http-server"]

[dependencies]
lambda_http = "0.1.1"
aws_lambda_events = "0.2"
reqwest = {version="0.9", features=["rustls-tls"], default-features=false}
crossbeam = "0.7"
maplit = "1"
actix-web = {version="2", default-features=false}
actix = {version="0.10", default-features=false}
log = "0.4"
percent-encoding = "2"
serde_json = "1"

[dev-dependencies]
env_logger = "0.8"